// Copyright 2025 Nokia
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package tree_persist.proto;

import "schema.proto";

option go_package = "github.com/sdcio/sdc-protos/tree_persist;tree_persist";

message Intent {
  string      intent_name               = 1;
  TreeElement root                      = 2;
  int32       priority                  = 3;
  bool        deviation                 = 4;
  repeated schema.Path explicit_deletes = 5;
}

message TreeElement {
  string               name         = 1;
  repeated TreeElement childs       = 4;
  bytes                leaf_variant = 5;
}
